# money-chart

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  up.sql
migrations/2022-11-17-212202_initial/: down.sql  up.sql
src/: http.rs  main.rs  models.rs  schema.rs  tg.rs
static/: package-lock.json  package.json  webpack.config.js
static/public/: index.html  style.css
static/src/: index.js
