[package]
name = "money-chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11.2" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
warp = { version = "0.3.0", features = ["tls"] }
tokio = { version = "1.21.2" , features = [ "macros", "rt-multi-thread" ] }
diesel = { version = "2.0.2", features = [ "postgres" ] }
dotenv = "0.15.0"
serde = "1.0.147"
pretty_env_logger = "0.4.0"
futures = "0.3.25"